[tool.poetry]
name = "forgetthemilk"
version = "1.0"
description = "Forget The Milk is a small project that converts Remeber The Milk JSON task export into a CSV file Todoist will parse."
authors = ["Chris Patti <feoh@feoh.org>"]
license = "Creative Commons"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
